export interface ReservationAttempt {
  id?: string;
  clientId?: string;
  date?: string;
  advertisementId: string;
  status: string;
}
